# hyprrec

./: Cargo.toml  README.md  package.nix  shell.nix
src/: main.rs  telemetry.rs
