[package]
name = "hyprrec"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
directories = "6"
input = "0.10"
libc = "0.2"
rmcp = { version = "2.2", features = ["server", "transport-io", "macros"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
